k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ctr-inference
  labels:
    name: ctr-inference
